tests/snapshots/contract_snapshot_exhaustive__exhaustive_work_order_with_vendor_config.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: wo
---
{
  "id": "01010101-0202-4303-8404-050505050505",
  "task": "vendor-heavy config",
  "lane": "patch_first",
  "workspace": {
    "root": ".",
    "mode": "staged",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": "gpt-4o",
    "vendor": {
      "abp": {
        "debug": true,
        "mode": "passthrough"
      },
      "max_tokens": 8192,
      "temperature": 0.3,
      "top_p": 0.9
    },
    "env": {},
    "max_budget_usd": 100.0,
    "max_turns": 200
  }
}
